package com.techguyseli.Eventster.entities;

public enum AccountStatus {
    ACTIVE, BLOCKED;
}
