package com.techguyseli.Eventster.entities;

public class Admin extends User {


    public Admin(String username, String password){
        setUsername(username);
        setPassword(password);
    }
}
