package com.techguyseli.Eventster.entities;

public enum ItemStatus {
  ACTIVE, CANCELED, DONE;
}
